Opened 8 years ago

Closed 2 months ago

#13455 closed bug (fixed)

[kernel] PANIC: vm_copy_on_write_area() failed!

Reported by: diver Owned by: nobody
Priority: normal Milestone: R1/beta6
Component: System/Kernel Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by diver)

hrev51127 x86_64.

Was trying to compile a nightly image of vlc on VMware Fusion with 1Gb of RAM with make -i -j2

Attachments (1)

kdl.png (282.9 KB ) - added by diver 8 years ago.

Download all attachments as: .zip

Change History (8)

by diver, 8 years ago

Attachment: kdl.png added

comment:1 by diver, 8 years ago

patch: 01

comment:2 by diver, 8 years ago

Description: modified (diff)

comment:3 by axeld, 8 years ago

It's probably just a bold way to tell that the system ran out of memory. Is that reproducible? In any case, a syslog would be nice, too.

If it's reproducible, can you report the commands that led to it?

comment:4 by korli, 8 years ago

How much swap is available/used?

comment:5 by diver, 8 years ago

Current swap 1.5 GiB/1.5 GiB

Not sure if it's fill or not? But memory bar in PC was red when this KDL happened.

comment:6 by pulkomandy, 8 years ago

patch: 10

comment:7 by waddlesplash, 2 months ago

Milestone: UnscheduledR1/beta6
Resolution: fixed
Status: newclosed

Fixed in hrev58405.

Note: See TracTickets for help on using tickets.