kernel/vm: Handle vm_copy_on_write_area failing properly.

Just delete the newly-created area and return the error.

Fixes #13455.